--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -1,3 +1,6 @@
+*{
+    font-family: Arial;
+}
 body {
     margin: 0;
     padding: 0;
@@ -42,7 +45,6 @@ padding: 15px;
 text-decoration: none;
 text-transform: uppercase;
 color: #727272;
-font-family: Arial;
 }
 
 nav .active a,
@@ -56,4 +58,83 @@ color: #fff;
     background-position: center;
     background-size: cover;
     height: 670px;
+    display: flex;
+    justify-content: center;
 }
+
+.column{
+flex-direction: column;
+}
+
+.banner_headline{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.banner_headline h1{
+    color: #fff;
+    font-size: 70px;
+    text-shadow: 0px 1px 0px #555;
+    margin: 0;
+    padding: 0;
+    max-width: 350px;
+}
+.banner_headline h2{
+    color: #fff;
+    font-size: 21px;
+    text-shadow: 0px 1px 0px #555;
+    margin: 0;
+    padding: 0;
+    max-width: 350px;
+    margin-top: 30px;
+}
+.banner_options{ 
+    height: 210px;
+    display: flex;
+}
+
+.banner1,.banner2,.banner3{
+    flex: 1;
+    color: #fff;
+    padding: 20px;
+}
+
+.banner1{
+    background-color: #39aae1;
+}
+.banner2{
+    background-color: #0079c7;
+}
+.banner3{
+    background-color: #2b4c99;
+}
+
+.banner_title{
+font-size: 21px;
+}
+.banner_desc{
+    font-size: 12px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.banner_options a{
+display: inline-block;
+border: 1px solid #fff;
+padding: 5px;
+color: #fff;
+font-size: 13px;
+text-decoration: none;
+}
+
+.semana, .sunday, .saturday{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #0079c7;
+    margin-top: 10px;
+    padding: 1px;
+    color: #fff;
+}
+
+
+
