finished aside, section

--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -4,7 +4,7 @@
 body {
     margin: 0;
     padding: 0;
-    padding-bottom: 300px;
+   
 }
 
 header {
@@ -169,20 +169,51 @@ text-decoration: none;
     margin-top: 10px;
 }
 
-.widget_body .grupo_blocos{
-    background-color: aqua;
+.grupo_blocos{
+
     display: flex;
     flex-wrap: wrap;
+    width: auto;
+    
+    margin-left: -10px;
     
 }
 
-.widget_body .grupo_blocos div{
-    margin: 10px;
-    width: 100px;
-    height: 100px;
+.grupo_blocos div{
+    padding: 10px;
+    margin: 5px 10px ;
+    width: 130px;
+    height: 130px;
     background-color: #39aae1;
 }
 
+.logo_contatos{
+    
+    width: auto;
+}
+.logo_contatos 
+.linha1,
+.linha2,
+.linha3{
+    display: flex;
+    
+    border-bottom: 1px solid #0079c7;
+    margin-top: 30px;
+    padding: 1px;
+}
+.logo_contatos .img{
+    width: 35px;
+    height: 35px;
+    padding: 5px;
+    align-content: center;
+
+}
+
+.logo_contatos div{
+   
+   align-items: center;
+    
+}
 .flex{
     display: flex;
     flex-wrap: wrap;
@@ -240,5 +271,70 @@ article .news_resume{
     line-height: 20px;
     font-size: 14px;
     margin-bottom: 30px;
+}
+
+footer{
+    background-color: #1e1e1e;
+    display: flex;
+    justify-content: center;
+}
+
+.footer_menu{
+    display: flex;
+   
+}
+
+.fm_1, .fm_2, .fm_3{
+    flex: 1;
+    color: #fff;
+    padding: 20px;
+}
+
+.fm_1{
+    background-color: #39aae1;
+}
+.fm_2{
+    background-color: #0079c7;
+}
+.fm_3{
+    background-color: #2b4c99;
+}
+
+.footer_area{
+
+display: flex;
 
 }
+.footer_areaitem{
+    flex: 1;
+    color: #fff;
+}
+.flexColumn{
+    flex-direction: column;
+}
+
+footer .widget_title_text{
+    color: #fff;
+} 
+
+.footer_copy{
+    border-top: 1px solid #2c2c2c;
+    height: 40px;
+    line-height: 40px;
+    color: #5c5c5c;
+    font-size: 12px;
+    margin-top: 30px;
+}
+
+.footer_menu{
+    color: #727272;
+}
+.footer_menu .fm_titulo{
+    font-size: 20px;
+}
+.footer_menu .fm_subtitulo{
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.footer_areaitem 
