--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -337,4 +337,65 @@ footer .widget_title_text{
     margin-top: 10px;
 }
 
-.footer_areaitem 
+.mdc_desc_resume {
+    color: #5c5c5c;
+    font-size: 12px;
+    line-height: 20px;
+    margin-bottom: 30px;
+}
+
+footer .medcenter_contatos{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.mdc_endeco {
+    color: #5c5c5c;
+    font-size: 12px;
+}
+
+.mdc_phones {
+    margin-top: 12px;
+    color: #5c5c5c;
+    font-size: 12px;
+    margin-right: 10px;
+}
+
+.social_medias {
+    display: flex;
+    flex-direction: row;
+}
+
+.social_media1, .social_media2, .social_media3, .social_media4 {
+    height: 20px;
+    width: 20px;  
+    background-color: #5c5c5c;
+    justify-content: left;
+    margin-right: 6px;
+    margin-top: 20px;
+}
+
+.lts_posts{
+    color: #5c5c5c;
+    font-size: 12px;
+    margin-top: 20px;
+}
+
+.time_post{
+    color: #0079c7;
+    font-size: 10px;
+    margin-top: 3px;
+}
+
+.tweets_posts {
+    color: #5c5c5c;
+    font-size: 12px;
+    margin-top: 20px;
+}
+
+.tweets_timeposts {
+    color: #0079c7;
+    font-size: 10px;
+    margin-top: 3px;
+}
